added mongoDB and made a connection to openAI image generation

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URL="mongodb+srv://Tasdid:oAquVkgtKJLErbrd@dall-e.amewzl2.mongodb.net/?retryWrites=true&w=majority"
+OPENAI_API_KEY="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"
